--- a/index.html
+++ b/index.html
@@ -21,23 +21,15 @@
 			<h1>Home</h1>
 	</header>
 
-			<h2>About Me</h2>
+			<h3><strong>About Me</strong></h3>
 
 	<section>
-		<main>
 			<p>Hi, my name is Ava Blank! I’m a student in <a href="https://journalism.wisc.edu">The School of Journalism and Mass Communication</a> at UW-Madison. I intend to graduate with a BA in Strategic Communication and a certificate in Digital Studies.
 			My areas of study include journalism, advertising and digital media.</p>
-		</main>
-
-	<article class="mart">
-		<img src="avadelaney.jpg" alt"Ava's photo" width="280" height="420">
+	<article>
+		<img src="avadelaney.jpg" alt="Photo of Ava with a friend" width="280" height="420">
 	</article>
-
 	</section>
-
-
-	<footer>
-			<p> This is my footer </p>
-	</footer>
+	
 </body>
 </html>
