--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<p>Hi, my name is Ava Blank! I’m a student in <a href="https://journalism.wisc.edu">The School of Journalism and Mass Communication</a> at UW-Madison. I intend to graduate with a BA in Strategic Communication and a certificate in Digital Studies.
 			My areas of study include journalism, advertising and digital media.</p>
 	<article>
-		<img src="avadelaney.jpg" alt="Photo of Ava with a friend" width="280" height="420">
+		<img src="avadelaney.JPG" alt="Photo of Ava with a friend" width="280" height="420">
 	</article>
 	</section>
 	
