--- a/gallery.html
+++ b/gallery.html
@@ -31,13 +31,13 @@
 			</div>
 
 			<div class="gallery">
-        	<img src="friends.jpg" alt="Friends" width="380" height="380"> 
+        	<img src="friends.JPG" alt="Friends" width="380" height="380"> 
   			</a>
   			<div class="desc">My friends and I on Valentines Day.</div>
 			</div>
 
 			<div class="gallery">
-   			<img src="badger.jpg" alt="A photo of my roomates and I at a Badger football tailgate" width="600" height="400">
+   			<img src="badger.JPG" alt="A photo of my roomates and I at a Badger football tailgate" width="600" height="400">
   			</a>
   			<div class="desc">At a Badger football tailgate with my roommates.</div>
 			</div>
