--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 			</div>
 		
 		<div class="portfolio">
-			<h3><a href="https://barsinmadisonwi.wordpress.com/">Click here to view a website featuring my journalistic work!<br> You can also read an article I wrote about a local bar manager in Madison, Wisconsin.</h3>
+			<dl><a href="https://barsinmadisonwi.wordpress.com/">Click here to view a website featuring my journalistic work!<br> You can also read an article I wrote about a local bar manager in Madison, Wisconsin.</dl>
 			<img src="article.png" width="400px">
 		</div>
 		
