--- a/travel.html
+++ b/travel.html
@@ -20,7 +20,7 @@
 		</nav>
 			</header>
 			<h1>Travel</h1>
-			<h3><bold>Spain</bold></h3>
+			<h3><i>Spain</i></h3>
 <div class="castle">
 	
 	<ul>
