--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<h1>Home</h1>
 	</header>
 
-			<h3><strong>About Me</strong></h3>
+			<h3><i>About Me</i></h3>
 
 	<section>
 			<p>Hi, my name is Ava Blank! I’m a student in <a href="https://journalism.wisc.edu">The School of Journalism and Mass Communication</a> at UW-Madison. I intend to graduate with a BA in Strategic Communication and a certificate in Digital Studies.
